--- a/app/src/main/res/layout/activity_contest_detail.xml
+++ b/app/src/main/res/layout/activity_contest_detail.xml
@@ -75,29 +75,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="47dp"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="4dp"
                 android:fontFamily="@font/suit_bold"
                 android:text="대회 상세 페이지 >"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@id/iv_contestdetail_poster"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_contestdetail_poster" />
 
             <TextView
                 android:id="@+id/tv_contestdetail_host"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginBottom="12dp"
                 android:fontFamily="@font/suit_bold"
                 android:text="추천 팀"
                 android:textColor="#1D1D1D"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_contestdetail_poster" />
+                app:layout_constraintTop_toBottomOf="@id/btn_contestdetail_gotopage" />
 
             <TextView
                 android:id="@+id/tv_contestdetail_hostteam"
